<?xml version="1.0"?>
<package format="2">
  <name>terrain_gazebo</name>
  <version>0.0.0</version>
  <description>The terrain_gazebo package</description>

  <maintainer email="hynkis@kaist.ac.kr">Hyunki Seong</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>warthog_gazebo</exec_depend>
  <exec_depend>heron_gazebo</exec_depend>
  <exec_depend>uuv_gazebo_worlds</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
